2012-05-08  6.7.6-10 Anthony Thyssen <A.Thyssen@griffith...>
  * Added a low level "Cosine" Windowing Filter -- Request by Nicholas Robidox
  * Fixed Kaiser Window Filter (was producing all zeros!)

2012-05-05  6.7.6-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-9, SVN revision 7812.

2012-05-05  6.7.6-9 Anthony Thyssen <A.Thyssen@griffith...>
  * Allow braced single letter excapes, EG "%[x]" as equivelent to "%x"

2012-05-04  6.7.6-9 Glenn Randers-Pehrson <glennrp@image...>
  * Don't write an invalid PNG sRGB chunk when rendering intent is undefined.

2012-05-01  6.7.6-9 Cristy  <quetzlzacatenango@image...>
  * EXR images are in the linear RGB colorspace with a gamma of 1.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=20895).
  * Correct annotation offset for right-to-left labels (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20884).
  * The -level 100x0% now produces the equivalent of -negate (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20889).
  * Virtual pixel transparent no longer cause fatal exception (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=20903).
  * Promote gray image to sRGB when color is injected.

2012-04-29  6.7.6-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-8, SVN revision 7705.

2012-04-25  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Gaussian Filter Fixed.
    For some strange reason it was half the width it should be with an
    effective sigma of 0.25 (not 0.5).  This was the real reason "variable
    blur" was not blurring enough.

2012-04-24  6.7.6-8 Cristy  <quetzlzacatenango@image...>
  * Colorspace round-trip unit tests now work for Q32.

2012-04-23  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added the RobidouxSharp filter (originally defined Dec 2011)
  * Fixed Variable Blur - bad blur area calculation